--- a/src/index.css
+++ b/src/index.css
@@ -131,7 +131,7 @@ button {
   cursor: pointer;
   transition: 0.3s;
   line-height: var(--lh-sm);
-  border: 2px solid var(--secondary-color);
+  /* border: 2px solid var(--secondary-color); */
 }
 button.primary {
   background-color: var(--primary-color);
