--- a/src/index.css
+++ b/src/index.css
@@ -301,7 +301,6 @@ button.secondary:hover {
   background: #555;
 }
 
-/* Button hover effects */
 button {
   transition: all 0.2s ease;
 }
@@ -322,6 +321,67 @@ button:active {
 
 
 
+.border-animated {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+
+/* Border elements */
+.border-animated::before,
+.border-animated::after {
+  content: "";
+  position: absolute;
+  background-color: black;
+  transition: transform 0.3s ease;
+}
+
+/* Horizontal Borders */
+.border-animated::before {
+  width: 100%;
+  height: 2px;
+  top: 0;
+  left: 0;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.border-animated::after {
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  right: 0;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+/* Vertical Borders */
+.border-animated::before {
+  height: 100%;
+  width: 2px;
+  top: 0;
+  left: 0;
+  transform: scaleY(0);
+  transform-origin: top;
+}
+
+.border-animated::after {
+  height: 100%;
+  width: 2px;
+  bottom: 0;
+  right: 0;
+  transform: scaleY(0);
+  transform-origin: bottom;
+}
+
+/* Hover animations */
+.border-animated:hover::before {
+  transform: scaleX(1);
+}
+
+.border-animated:hover::after {
+  transform: scaleY(1);
+}
 
 
 
