--- a/src/index.css
+++ b/src/index.css
@@ -8,8 +8,8 @@
   --font-body: "Raleway", sans-serif;
 
   /* Colors */
-  --primary-color: #000000; /* Black */
-  --secondary-color: #d4af37; /* Golden */
+  /* --primary-color: #000000;  */
+  /* --secondary-color: #d4af37;  */
 
   /* Font sizes */
   --text-xs: 12px;
